# antupy

./: .dirs  .gitignore  .readthedocs.yaml  CHANGELOG.md  DEVS.md  HYPOTHESIS_GUIDE.md  LICENSE  README.md  ROADMAP.csv  antupy_dataframe_demo.py  demo_hypothesis.py  pyproject.toml  pyproject.toml.bkp  test_dataframe_demo.py  test_enhanced_component_system.py
.github/workflows/: draft-pdf.yml
antupy/: __init__.py  array.py  constants.py  core.py  dataframe.py  ddd.py  ddd_au.py  ddd_cl.py  frame.py  general.py  geo.py  geolocation.py  globals.py  htc.py  plant.py  props.py  protocols.py  protos.py  solar.py  units.py  var.py
antupy/analyser/: __init__.py  fin.py  lca.py  mc.py  par.py  par2.py
antupy/analysis/: fin.py  lca.py  mc.py  par.py
antupy/core/: __init__.py  array.py  ddd.py  frame.py  par.py  plant.py  protocols.py  units.py  var.py
antupy/cst/: analyser.py  mcrt.py  optics.py  simulator.py
antupy/loc/: loc.py  loc_au.py  loc_cl.py
antupy/location/: au.py
antupy/model/: bio.py  csp.py  tpp.py
antupy/models/: bdr.py  csp.py  cst.py  desal.py  dwh.py  pv.py  stc.py  stg.py  storage.py
antupy/project/: simulation.py
antupy/sim/: dwh_trnsys.py  hwt_trnsys.py  mcrt.py  sim.py
antupy/solver/: trnsys_dewh.py
antupy/ts/: ctrl.py  market.py  mkt.py  wea.py  weather.py
antupy/tsg/: __init__.py  ctr.py  fc.py  hwd.py  mkt.py  settings.py  wea.py  weather.py
antupy/utils/: htc.py  loc.py  props.py  solar.py
antupy/utils/loc/: __init__.py
dev/: 1.ASSESSMENT.md  2.PLAN.md
dev/cat/cst/: mcrt.py  optics.py  simulator.py
dev/models/: stc.py  stg.py
dev/papers/: paper-proposal.md
dev/solvers/: tm.py
docs/: requirements.txt
docs/source/: api.rst  conf.py  core_classes.rst  htc.rst  index.rst  location.rst  overview.rst  props.rst  system_classes.rst  tsg_settings.rst  tsg_weather.rst  units.rst  utilities.rst  variable_system.rst
papers/core/: antupy_references.bib  mwe.py  paper.md
papers/dwh/: solarshift.bib
papers/optimising_bdr/: Paper_Optimization.docx  paper_optim.aux  paper_optim.blg  paper_optim.out  paper_optim.tex  paper_optim.toc  paper_optimization.tex
projects/: dewh.py
tests/: test_array.py  test_array_hypothesis.py  test_dataframe.py  test_frame.py  test_htc.py  test_mkt.py  test_par.py  test_par_hypothesis.py  test_plant.py  test_props.py  test_settings.py  test_units.py  test_var.py  test_weather_classes.py  test_weather_integration.py  test_weather_protocol.py  test_weather_utils.py
tests/model/: test_bdr.py
tuts/: antupy.pptx  examples.py
tuts/prezzo/: antupy.pptx  antupy_diagram.pptx  ~$antupy.pptx
(+7 files in other folders)
