[tool.poetry]
name = "antupy"
version = "0.1.0"
description = "Energy system analyser"
authors = ["David Saldivia <david.saldivia.s@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"
pandas = "^2.2.3"
polars = "^1.9.0"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
pvlib = "^0.11.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
mypy = "^1.12.0"
pandas-stubs = "^2.2.3.241009"
isort = "^5.13.2"
black = "^24.10.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
