[tool.poetry]
name = "antupy"
version = "0.6.2"
description = "Toolkit for energy engineering"
authors = ["David Saldivia <david.saldivia.s@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/DavidSaldivia/antupy"
repository = "https://github.com/DavidSaldivia/antupy"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
numpy = "^2.0"
pandas = "^2.0"
polars = "^1.0.0"
scipy = "^1.11"
coolprop = "^6.6"
xarray = {version = "^2024.1", optional = true}
matplotlib = {version = "^3.8", optional = true}
pvlib = {version = "^0.10", optional = true}

[tool.poetry.extras]
all = ["xarray", "matplotlib", "pvlib"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
mypy = "^1.12.0"
scipy-stubs = "^1.14.1.6"
pandas-stubs = "^2.2.3.241009"
isort = "^5.13.2"
black = "^24.10.0"
flake8 = "^7.1.1"
sphinx = "^8.2.3"
furo = "^2025.7.19"
sphinx-rtd-theme = "^3.0.2"
pydata-sphinx-theme = "^0.16.1"
sphinx-material = "^0.0.36"
piccolo-theme = "^0.24.0"
groundwork = "^0.1.17"
hypothesis = "^6.138.14"
coverage = {extras = ["toml"], version = "^7.10.7"}
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"